Fixed alignment of <pre>

--- a/style.css
+++ b/style.css
@@ -90,3 +90,12 @@ a:focus {
 }
 
 /* End Centering Jumbotron*/
+
+
+/* Justifying pre */
+
+pre {
+	text-align: left;
+}
+
+
